--- a/src/app/appointment-details/appointment-details.component.scss
+++ b/src/app/appointment-details/appointment-details.component.scss
@@ -1,14 +1,5 @@
-h2{
-  text-align: center;
-}
-
-#outline{
-  text-align: center;
-  border: 2px solid black;
-  height: 90vh;
-  width: 60vw;
-  margin-right: auto;
-  margin-left: auto;
+#Hoofdmenu{
+  border-radius: 25px;
 }
 
 @media screen and (max-width: 600px){
