--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -15,7 +15,6 @@
 #Reparation{
   width: 25vw;
   border-radius: 25px;
-  background-color: yellow;
   color: black;
   margin-left: auto;
   margin-right: auto;
@@ -26,25 +25,31 @@
 #Active{
   width: 25vw;
   border-radius: 25px;
-  background-color: yellow;
   color: black;
   margin-left: auto;
   margin-right: auto;
   display: block;
 }
 
-.activereparations__container{
-  border-top: 1px solid black;
   .activereparations{
-    text-align: center;
-  }
+    text-align: center
 }
 
+  .closedreparations{
+    text-align: center;
+  }
+
+  .span{
+    margin: auto;
+  }
+
 #ActiveReparationTile{
-  border: 2px solid black;
-  background-color: grey;
-  width: 600px;
-  height: 300px;
+  margin-right: auto;
+  margin-left: auto;
+  word-wrap: break-word;
+}
+
+#ClosedReparationTile{
   margin-right: auto;
   margin-left: auto;
   word-wrap: break-word;
