--- a/src/app/request-reparation/request-reparation.component.html
+++ b/src/app/request-reparation/request-reparation.component.html
@@ -1,9 +1,12 @@
-<mat-card class="Outline">
   <button id="Hoofdmenu" routerLink='' routerLinkActive="active">Terug</button>
-  <h1 id="IntroGreet">Reparatie Aanvragen</h1>
+  <mat-toolbar>
+    <mat-toolbar-row>
+      <span class="span">Reparatie aanvragen</span>
+    </mat-toolbar-row>
+  </mat-toolbar>
   <br>
   <br>
-
+  <mat-card class="Outline">
   <div class="FormParent">
   <mat-form-field class="CategoryPicker">
     <mat-label>Kies Categorie</mat-label>
