--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,16 @@
 .greeting__container{
   border: 1px solid black;
+
+
+  .profilepicdefault{
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    margin-left: 10px;
+    margin-top: 10px;
+    cursor: pointer;
+  }
+
 }
 .greeting{
   text-align: center;
@@ -20,6 +31,15 @@
   margin-right: auto;
   display: block;
 
+}
+
+#DIY{
+  width: 25vw;
+  border-radius: 25px;
+  color: black;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 #Active{
