--- a/src/app/do-it-yourself/do-it-yourself.component.html
+++ b/src/app/do-it-yourself/do-it-yourself.component.html
@@ -1,4 +1,4 @@
-<button id="Hoofdmenu" routerLink='' routerLinkActive="active">Terug</button>
+<button id="MainMenu" routerLink='' routerLinkActive="active">Terug</button>
 <mat-toolbar>
   <mat-toolbar-row>
     <span class="span">Doe-het-zelfinstructies</span>
