--- a/src/app/request-reparation/request-reparation.component.scss
+++ b/src/app/request-reparation/request-reparation.component.scss
@@ -1,4 +1,4 @@
-#Hoofdmenu{
+#MainMenu{
   border-radius: 25px;
 }
 
@@ -6,7 +6,7 @@
   margin: auto;
 }
 
-.Bevestig{
+.Confirm{
   border-radius: 25px;
   color: black;
   display: block;
