--- a/src/app/appointment-details/appointment-details.component.html
+++ b/src/app/appointment-details/appointment-details.component.html
@@ -1,4 +1,4 @@
-<button id="Hoofdmenu" routerLink='' routerLinkActive="active">Terug</button>
+<button id="MainMenu" routerLink='' routerLinkActive="active">Terug</button>
 <mat-toolbar>
 <span>Details van klus:</span>
 </mat-toolbar>
