--- a/src/app/request-reparation/request-reparation.component.scss
+++ b/src/app/request-reparation/request-reparation.component.scss
@@ -6,6 +6,11 @@
   margin: auto;
 }
 
+#problemdescription{
+  word-wrap: break-word;
+  width: 250px;
+}
+
 .Confirm{
   border-radius: 25px;
   color: black;
