--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,19 +1,17 @@
-.greeting__container{
-  border: 1px solid black;
-
-
-  .profilepicdefault{
-    border-radius: 50%;
-    height: 50px;
-    width: 50px;
-    margin-left: 10px;
-    margin-top: 10px;
-    cursor: pointer;
-  }
-
-}
 .greeting{
   text-align: center;
+  &__container {
+    border: 1px solid black;
+
+    .profilepicdefault{
+      border-radius: 50%;
+      height: 50px;
+      width: 50px;
+      margin-left: 10px;
+      margin-top: 10px;
+      cursor: pointer;
+    }
+  }
 }
 
 .outline{
@@ -50,9 +48,8 @@
   margin-right: auto;
   display: block;
 }
-
   .activereparations{
-    text-align: center
+    text-align: center;
 }
 
   .closedreparations{
