Adding support for dynamic showing of customer data

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,7 +1,7 @@
 <button id="MainMenu" routerLink='' routerLinkActive="active">Terug</button>
 <mat-toolbar>
   <mat-toolbar-row>
-    <span class="span">Mijn profiel</span>
+    <span>Mijn profiel</span>
   </mat-toolbar-row>
 </mat-toolbar>
 <br>
