--- a/src/app/request-reparation/request-reparation.component.html
+++ b/src/app/request-reparation/request-reparation.component.html
@@ -1,7 +1,7 @@
   <button id="MainMenu" routerLink='' routerLinkActive="active">Terug</button>
   <mat-toolbar>
     <mat-toolbar-row>
-      <span class="span">Reparatie aanvragen</span>
+      <span>Reparatie aanvragen</span>
     </mat-toolbar-row>
   </mat-toolbar>
   <br>
